--- a/package.json
+++ b/package.json
@@ -11,21 +11,28 @@
     "test": "jest"
   },
   "dependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.7",
     "@types/ioredis": "^4.17.3",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/redis": "^2.8.26",
+    "@types/uuid": "^8.3.0",
+    "bcryptjs": "^2.4.3",
     "celebrate": "^12.2.0",
+    "class-transformer": "^0.3.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "ioredis": "^4.17.3",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.3.2",
     "rate-limiter-flexible": "^2.1.10",
     "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.3.0",
-    "typeorm": "^0.2.25"
+    "typeorm": "^0.2.25",
+    "uuid": "^8.3.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.7",
@@ -40,6 +47,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "jest": "^26.4.2",
     "prettier": "^2.0.5",
+    "ts-jest": "^26.2.0",
     "ts-node-dev": "^1.0.0-pre.60",
     "typescript": "^4.0.2"
   }
