--- a/ormconfig.example.json
+++ b/ormconfig.example.json
@@ -4,9 +4,9 @@
     "type": "postgres",
     "host": "localhost",
     "port": 5432,
-    "username": "example",
-    "password": "example",
-    "database": "example",
+    "username": "vaggo",
+    "password": "vaggo",
+    "database": "vaggo",
     "entities": [
       "./src/modules/**/infra/typeorm/entities/*.ts"
     ],
