--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,13 @@ APP_API_URL=http://localhost:3333
 APP_WEB_URL=http://localhost:3000
 
 # Redis
-REDIS_HOST=localhost
+REDIS_HOST=vaggo_redis
 REDIS_PORT=6379
-REDIS_PASS=
+REDIS_PASS=reset-password
+
+# Postgres
+POSTGRES_HOST=vaggo_postgres
+POSTGRES_PORT=5432
+POSTGRES_DB=reset-password
+POSTGRES_USER=reset-password
+POSTGRES_PASS=reset-password
