--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,7 @@
 # Application
 PRODUCTION=true
-APP_SECRET=
-APP_API_URL=http://localhost:3333
-APP_WEB_URL=http://localhost:3000
+APP_SECRET=reset-secret
+PREFIX_API_URL=vaggo
 
 # Redis
 REDIS_HOST=vaggo_redis
